--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,8 +88,6 @@ header{
     border-radius: 10px;
     & .img-container{
         margin: 20px 10px;
-        /* width: 95%;
-        height: 98%; */
         display: grid;
         grid-template-columns: 1, 1fr;
         grid-template-rows: repeat(50, 150px);
@@ -100,18 +98,24 @@ header{
         & .imgs{
             width: 100%;
             height: 100%;
-            border: 1px solid blue;
             display: flex;
             justify-content: center;
             align-items: center;
             object-fit: cover;
             border-radius: 10px;
             overflow: hidden;
+            box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
             & img{
                 min-width: 100%;
                 min-height: 100%;
                 object-fit: cover;
                 border-radius: 10px;
+            }
+            & img:hover{
+                transition: 0.3s ease-in-out;
+                transform: scale(1.04);
+                cursor: pointer;
+                box-shadow: 2px 2px 2px rgba(216, 202, 202, 0.3);
             }
         }
         & .img1{
@@ -156,7 +160,6 @@ header{
         & .img14{
             grid-row: 48 / 53;
         }
-        
     }
 }
 
@@ -177,8 +180,68 @@ header{
     /* main */
     .main-container{
         width: 98vw;
+        & .img-container{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(50, 50px);
+            gap: 20px;
+            & .img1{
+                grid-column: 1 / 2;
+                grid-row: 1 / 7;
+            }
+            & .img2{
+                grid-column: 2 / 3;
+                grid-row: 1 / 8;
+            }
+            & .img3{
+                grid-column: 1 / 2;
+                grid-row: 7 / 18;
+            }
+            & .img4{
+                grid-column: 2 / 3;
+                grid-row: 8 / 16;
+            }
+            & .img5{
+                grid-column: 1 / 2;
+                grid-row: 18 / 23;
+            }
+            & .img6{
+                grid-column: 2 / 3;
+                grid-row: 16 / 23;
+            }
+            & .img7{
+                grid-column: 1 / 2;
+                grid-row: 23 / 28;
+            }
+            & .img8{
+                grid-column: 2 / 3;
+                grid-row: 23 / 29;
+            }
+            & .img9{
+                grid-column: 1 / 2;
+                grid-row: 28 / 35;
+            }
+            & .img10{
+                grid-column: 2 / 3;
+                grid-row: 29 / 37;
+            }
+            & .img11{
+                grid-column: 1 / 2;
+                grid-row: 35 / 41;
+            }
+            & .img12{
+                grid-column: 2 / 3;
+                grid-row: 37 / 42;
+            }
+            & .img13{
+                grid-column: 1 / 2;
+                grid-row: 41 / 50;
+            }
+            & .img14{
+                grid-column: 2 / 3;
+                grid-row: 42 / 50;
+            }
+        }
     }
-    
 }
 
 
@@ -199,5 +262,65 @@ header{
     /* main */
     .main-container{
         width: 98.5vw;
+        & .img-container{
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(50, 50px);
+            & .img1{
+                grid-column: 1 / 2;
+                grid-row: 1 / 5;
+            }
+            & .img2{
+                grid-column: 2 / 3;
+                grid-row: 1 / 6;
+            }
+            & .img3{
+                grid-column: 3 / 4;
+                grid-row: 1 / 8;
+            }
+            & .img4{
+                grid-column: 4 / 5;
+                grid-row: 1 / 7;
+            }
+            & .img5{
+                grid-column: 1 / 2;
+                grid-row: 5 / 10;
+            }
+            & .img6{
+                grid-column: 2 / 3;
+                grid-row: 6 / 11;
+            }
+            & .img7{
+                grid-column: 3 / 4;
+                grid-row: 8 / 13;
+            }
+            & .img8{
+                grid-column: 4 / 5;
+                grid-row: 7 / 13;
+            }
+            & .img9{
+                grid-column: 1 / 2;
+                grid-row: 10 / 17;
+            }
+            & .img10{
+                grid-column: 2 / 3;
+                grid-row: 11 / 18;
+            }
+            & .img11{
+                grid-column: 3 / 4;
+                grid-row: 13 / 18;
+            }
+            & .img12{
+                grid-column: 4 / 5;
+                grid-row: 13 / 20;
+            }
+            & .img13{
+                grid-column: 1 / 2;
+                grid-row: 17 / 24;
+            }
+            & .img14{
+                grid-column: 2 / 3;
+                grid-row: 18 / 24;
+            }
+        }
     }
 }
